# serializer version: 1
# name: test_stage_execute
  list([
    dict({
      'Error': None,
      'File': '@test_stage_execute/script1.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/directory/script2.sql',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/directory/subdirectory/script3.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_stage_execute_python
  list([
    dict({
      'Error': None,
      'File': 'test_stage_execute/script1.py',
      'Status': 'SUCCESS',
    }),
    dict({
      'Error': None,
      'File': '@test_stage_execute/script_template.py',
      'Status': 'SUCCESS',
    }),
  ])
# ---
